--- a/i3/configs.d/bindsym.conf
+++ b/i3/configs.d/bindsym.conf
@@ -1,65 +1,65 @@
+# Use Mouse+$mod to drag floating windows to their wanted position
+floating_modifier $mod
+
 # start a terminal
 bindsym $mod+Return exec $terminal
 
-# kill a focussed window
+# kill focused window
 bindsym $mod+Shift+apostrophe kill
 
-# Rofi settings (program launcher - dmenu replacement)
-set $rofi_exec exec rofi -show drun -eh -padding 16
-
-bindsym $mod+d $rofi_exec
-bindsym XF86Search $rofi_exec
-bindsym $mod+Tab rofi -show window
-
-# Rofi for ssh
+# start rofi (a program launcher)
+set $execute exec rofi -show drun -eh 2 -padding 16
+# start rofi (a program launcher)
+bindsym $mod+d $execute
+bindsym XF86Search $execute
+bindsym $mod+Tab exec rofi -show window
 bindsym $sup+s exec rofi -show ssh
 
-# Change window focus
-bindsym $mod+h focus left
-bindsym $mod+j focus down
-bindsym $mod+k focus up
-bindsym $mod+l focus right
+# change focus
+bindsym $mod+j focus left
+bindsym $mod+k focus down
+bindsym $mod+l focus up
+bindsym $mod+semicolon focus right
 
+# alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
 bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
-# Move focused window
-bindsym $mod+Shift+h move left
-bindsym $mod+Shift+j move down
-bindsym $mod+Shift+k move up
-bindsym $mod+Shift+l move right
+# move focused window
+bindsym $mod+Shift+j move left
+bindsym $mod+Shift+k move down
+bindsym $mod+Shift+l move up
+bindsym $mod+Shift+semicolon move right
 
+# alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
-# Split windows horizontally
-bindsym $mod+h
+# split in horizontal orientation
+bindsym $mod+h split h
 
-# Split windows vertically
-bindsym $mod+v
+# split in vertical orientation
+bindsym $mod+v split v
 
-# Toggle fullscreen
+# enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
 
-# Change layout type
-# stacking:
+# change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
-# tabbed: 
 bindsym $mod+w layout tabbed
-# split (normal):
-bindsym $mod+e layout split
+bindsym $mod+e layout toggle split
 
-# toggle tiled / floating
-bindsym $mod+Shift+Space floating toggle
+# toggle tiling / floating
+bindsym $mod+Shift+space floating toggle
 
-# Change focus between windows
-bindsym $mod+Space focus mode_toggle
+# change focus between tiling / floating windows
+bindsym $mod+space focus mode_toggle
 
-# Focus the parent container
+# focus the parent container
 bindsym $mod+a focus parent
 
 # switch to workspace
@@ -74,7 +74,7 @@ bindsym $mod+8 workspace $ws8
 bindsym $mod+9 workspace $ws9
 bindsym $mod+0 workspace $ws10
 
-# Move container to workspac
+# move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace $ws1
 bindsym $mod+Shift+2 move container to workspace $ws2
 bindsym $mod+Shift+3 move container to workspace $ws3
@@ -86,47 +86,57 @@ bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws10
 
-# Reload the config file
+# reload the configuration file
 bindsym $mod+Shift+c reload
-
-# restart i3 inplace (preserves layout / session - can be used to upgrade i3)
+# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
+# exit i3 (logs you out of your X session)
+#bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+bindsm $mod+Shift+e exec i3-msg exit
 
-# todo: Make this work like resize mode for different options
-# exit i3 (logs out of x session)
-# bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
-bindsym $mod+Shift+e exec i3-msg exit
+bindsym $mod+shift+x exec --no-startup-id dm-tool lock<Paste>
 
-# lock screen
-bindsym $mod+Shift+x exec --no-startup-id dm-tool lock<Paste>
-
+# resize window (you can also use the mouse for that)
 mode "resize" {
-    # these bindings trigger only in resize mode 
-    bindsym h resize shrink width 10 px or 10 ppt
-    bindsym j resize grow height 10 px or 10 ppt
-    bindsym k resize shrink height 10 px or 10 ppt
-    bindsym l resize grow width 10 px or 10 ppt
+        # These bindings trigger as soon as you enter the resize mode
 
-    # same bindings with arrows
-    bindsym Left resize shrink width 10 px or 10 ppt
-    bindsym Down resize grow height 10 px or 10 ppt
-    bindsym Up resize shrink height 10 px or 10 ppt
-    bindsym Right resize grow width 10 px or 10 ppt
+        # Pressing left will shrink the window’s width.
+        # Pressing right will grow the window’s width.
+        # Pressing up will shrink the window’s height.
+        # Pressing down will grow the window’s height.
+        bindsym j resize shrink width 10 px or 10 ppt
+        bindsym k resize grow height 10 px or 10 ppt
+        bindsym l resize shrink height 10 px or 10 ppt
+        bindsym semicolon resize grow width 10 px or 10 ppt
 
-    # back to normal mode
-    bindsym Return mode "default"
-    bindsym Escape mode "default"
-    bindsym $mod+r mode "default"
+        # same bindings, but for the arrow keys
+        bindsym Left resize shrink width 10 px or 10 ppt
+        bindsym Down resize grow height 10 px or 10 ppt
+        bindsym Up resize shrink height 10 px or 10 ppt
+        bindsym Right resize grow width 10 px or 10 ppt
+
+        # back to normal: Enter or Escape or $mod+r
+        bindsym Return mode "default"
+        bindsym Escape mode "default"
+        bindsym $mod+r mode "default"
 }
 
 bindsym $mod+r mode "resize"
 
-# Audio controls
+
+# Pulse Audio controls
+ #increase sound volume
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5%
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5%
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle
+#decrease sound volume
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% 
+
+# mute sound
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle 
+
+# mute mic
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute 1 toggle
 
-# Screen brightness controls
+# Sreen brightness controls
 bindsym XF86MonBrightnessUp exec --no-startup-id xbacklight -inc 5
 bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 5
+
